feat: improve thread management and naming in service implementation